# QuantumHybridDFT

./: .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml  requirements.txt  run_tests.py
.devcontainer/: devcontainer.json
src/qhdft/: density.py  discretization.py  hamiltonian.py  main.py  qsvt.py  qsvt_circuit.py  qsvt_qsp.py  scf.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py  validation.py
src/qhdft/visualization/: comparison.py  discretization.py  energy.py  scaling.py  scf.py
tests/: test_density.py  test_discretization.py  test_hamiltonian.py  test_main.py  test_qsvt.py  test_scf.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_validation.py
