[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qhdft"
version = "0.1.0"
authors = [
  { name="Alain Richardt", email="alain@atomictessellator.com" },
]
description = "Quantum Hybrid DFT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "http://atomictessellator.com"
